# ALCNet

./: LICENSE  MANIFEST.in  PACKAGE_README.md  QUICKSTART.md  README.md  UPLOAD_GUIDE.md  pyproject.toml  setup.py
alcnet/: __init__.py  analysis.py  model.py  trainer.py  utils.py
examples/: mnist_example.py
tests/: test_alcnet.py
