[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "alcnet"
version = "0.1.1"
description = "Adaptive Layer Condensation Networks - Learning Dynamic Compression Ratios for Hierarchical Feature Selection"
readme = "README.md"
authors = [
    {name = "Ananda Jana"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "deep-learning",
    "neural-networks",
    "compression",
    "feature-selection",
    "adaptive-architecture",
    "pytorch",
    "machine-learning",
]
requires-python = ">=3.7"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "tqdm>=4.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
]
viz = [
    "matplotlib>=3.3.0",
]
examples = [
    "torchvision>=0.10.0",
    "scikit-learn>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/anandajana/alcnet"
Documentation = "https://github.com/anandajana/alcnet#readme"
Repository = "https://github.com/anandajana/alcnet"
"Bug Tracker" = "https://github.com/anandajana/alcnet/issues"

[tool.setuptools]
packages = ["alcnet"]

[tool.setuptools.package-data]
alcnet = ["py.typed"]
